[package]
name = "winio-ui-win32"
version = "0.2.0"
description = "Win32 backend for winio."
edition = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[target.'cfg(windows)'.dependencies]
winio-primitive = { workspace = true }
winio-handle = { workspace = true, features = ["win32"] }
winio-pollable = { workspace = true }
winio-ui-windows-common = { workspace = true, features = ["win32"] }

compio = { workspace = true, features = ["arrayvec"] }
compio-log = { workspace = true }

flume = { version = "0.11", optional = true }
futures-channel = { workspace = true, optional = true }
futures-util = { workspace = true }
inherit-methods-macro = { workspace = true }
image = { workspace = true, default-features = false }
scoped-tls = { workspace = true }
slab = "0.4"
widestring = { workspace = true }

windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi_Common",
] }
windows-core = { workspace = true, optional = true }
webview2 = { workspace = true, optional = true }

[features]
media = [
    "dep:futures-channel",
    "dep:windows-core",
    "windows/Win32_Media_MediaFoundation",
]
webview = [
    "dep:webview2",
    "dep:flume",
    "dep:futures-channel",
    "dep:windows-core",
    "winio-ui-windows-common/webview",
]

dark-mode = ["winio-ui-windows-common/dark-mode"]
