[package]
name = "winio-ui-win32"
version = "0.3.5"
description = "Win32 backend for winio."
edition = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[target.'cfg(windows)'.dependencies]
winio-primitive = { workspace = true }
winio-handle = { workspace = true, features = ["win32"] }
winio-callback = { workspace = true, optional = true }
winio-ui-windows-common = { workspace = true, features = ["win32"] }

compio = { workspace = true, features = ["arrayvec"] }
compio-log = { workspace = true }

futures-util = { workspace = true }
inherit-methods-macro = { workspace = true }
local-sync = { workspace = true, optional = true }
image = { workspace = true }
once_cell = { workspace = true }
percent-encoding = { workspace = true, optional = true }
scoped-tls = { workspace = true }
slab = "0.4"
widestring = { workspace = true }

windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi_Common",
] }
windows-core = { workspace = true, optional = true }
webview2 = { workspace = true, optional = true }

[features]
media = [
    "dep:winio-callback",
    "dep:windows-core",
    "dep:percent-encoding",
    "windows/Win32_Media_MediaFoundation",
]
webview = [
    "dep:winio-callback",
    "dep:webview2",
    "dep:windows-core",
    "dep:local-sync",
]

dark-mode = ["winio-ui-windows-common/dark-mode"]

once_cell_try = ["winio-ui-windows-common/once_cell_try"]
nightly = ["once_cell_try"]
