[package]
name = "winio-ui-windows-common"
version = "0.1.0"
description = "Windows common methods for winio."
edition = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[target.'cfg(windows)'.dependencies]
winio-primitive = { workspace = true }

compio = { workspace = true }

image = { workspace = true, default-features = false }
widestring = { workspace = true }

windows = { workspace = true, features = [
    "UI_ViewManagement",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi_Common",
] }
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI",
] }
windows-numerics = "0.2"
