[package]
name = "winio"
version = "0.7.2"
description = "Single-threaded async GUI runtime based on compio."
categories = ["asynchronous", "gui"]
keywords = ["async", "gui"]
edition = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
winio-primitive = { workspace = true }
winio-layout = { workspace = true }
winio-handle = { workspace = true }
winio-elm = { workspace = true, features = ["handle", "layout"] }

compio = { workspace = true }
compio-log = { workspace = true }

cfg-if = { workspace = true }
futures-util = { workspace = true }
inherit-methods-macro = { workspace = true }
image = { workspace = true, default-features = false }

[target.'cfg(windows)'.dependencies]
winio-ui-win32 = { workspace = true, optional = true }
winio-ui-winui = { workspace = true, optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
winio-ui-app-kit = { workspace = true }

[target.'cfg(not(any(windows, target_os = "macos")))'.dependencies]
winio-ui-gtk = { workspace = true, optional = true }
winio-ui-qt = { workspace = true, optional = true }

[dev-dependencies]
compio = { workspace = true, features = ["time", "rustls", "ring"] }
cyper = { version = "0.5.0", default-features = false, features = [
    "rustls",
    "http2",
    "http3-altsvc",
] }

dirs = "6.0"
futures-util = { workspace = true }
image = { workspace = true, default-features = false, features = [
    "default-formats",
] }
itertools = "0.14"
tracing-subscriber = "0.3"
url = "2"

[features]
default = ["qt", "win32", "win32-dark-mode"]
win32 = ["dep:winio-ui-win32"]
winui = ["dep:winio-ui-winui"]
gtk = ["dep:winio-ui-gtk"]
qt = ["dep:winio-ui-qt"]
enable_log = ["compio/enable_log", "compio-log/enable_log"]

media = [
    "winio-ui-app-kit/media",
    "winio-ui-win32?/media",
    "winio-ui-winui?/media",
    "winio-ui-gtk?/media",
    "winio-ui-qt?/media",
]
webview = [
    "winio-ui-app-kit/webview",
    "winio-ui-win32?/webview",
    "winio-ui-winui?/webview",
    "winio-ui-gtk?/webview",
    "winio-ui-qt?/webview",
]
all = ["media", "webview"]

nightly = ["compio/nightly", "cyper/nightly"]
win32-dark-mode = [
    "winio-ui-win32?/dark-mode",
    "winio-ui-winui?/win32-dark-mode",
]
winui-enable-cbs = ["winio-ui-winui?/enable-cbs"]
winui-webview-system = ["winio-ui-winui?/webview-system"]
winui-mrm-hook = ["winio-ui-winui?/mrm-hook"]
objc-static = ["winio-ui-app-kit/objc-static"]

[[example]]
name = "media"
required-features = ["media"]

[[example]]
name = "net_webview"
required-features = ["webview"]
