[package]
name = "winio"
version = "0.9.3"
description = "Single-threaded async GUI runtime based on compio."
categories = ["asynchronous", "gui"]
keywords = ["async", "gui"]
edition = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
winio-primitive = { workspace = true }
winio-layout = { workspace = true }
winio-handle = { workspace = true }
winio-elm = { workspace = true, features = ["handle", "layout"] }

compio = { workspace = true }
compio-log = { workspace = true }

cfg-if = { workspace = true }
futures-util = { workspace = true }
inherit-methods-macro = { workspace = true }
image = { workspace = true, default-features = false }

[target.'cfg(windows)'.dependencies]
winio-ui-win32 = { workspace = true, optional = true }
winio-ui-winui = { workspace = true, optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
winio-ui-app-kit = { workspace = true }

[target.'cfg(not(any(windows, target_os = "macos")))'.dependencies]
winio-ui-gtk = { workspace = true, optional = true }
winio-ui-qt = { workspace = true, optional = true }

[dev-dependencies]
compio = { workspace = true, features = ["time", "rustls", "ring"] }
cyper = { version = "0.6.0", default-features = false, features = [
    "rustls",
    "http2",
    "http3-altsvc",
] }
cyper-axum = "0.6.0"
axum = { version = "0.8", default-features = false }

dirs = "6.0"
futures-util = { workspace = true }
image = { workspace = true, default-features = false, features = [
    "default-formats",
] }
itertools = "0.14"
local-sync = { workspace = true }
pulldown-cmark = "0.13"
send_wrapper = { workspace = true, features = ["futures"] }
tracing-subscriber = "0.3"
tuplex = "0.1"
url = "2"

[features]
default = ["qt", "win32"]
win32 = ["dep:winio-ui-win32"]
winui = ["dep:winio-ui-winui"]
gtk = ["dep:winio-ui-gtk"]
qt = ["dep:winio-ui-qt"]
enable_log = ["compio/enable_log", "compio-log/enable_log"]

media = [
    "winio-ui-app-kit/media",
    "winio-ui-win32?/media",
    "winio-ui-winui?/media",
    "winio-ui-gtk?/media",
    "winio-ui-qt?/media",
]
webview = [
    "winio-ui-app-kit/webview",
    "winio-ui-win32?/webview",
    "winio-ui-winui?/webview",
    "winio-ui-gtk?/webview",
    "winio-ui-qt?/webview",
]
all = ["media", "webview"]

nightly = ["compio/nightly", "cyper/nightly", "cyper-axum/nightly"]
win32-dark-mode = [
    "winio-ui-win32?/dark-mode",
    "winio-ui-winui?/win32-dark-mode",
]
winui-enable-cbs = ["winio-ui-winui?/enable-cbs"]
winui-webview-system = ["winio-ui-winui?/webview-system"]
objc-static = ["winio-ui-app-kit/objc-static"]
qt-opengl = ["winio-ui-qt?/opengl"]
