[package]
name = "winio"
version = "0.12.0"
description = "Single-threaded async GUI runtime based on compio."
categories = ["asynchronous", "gui"]
keywords = ["async", "gui"]
edition = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
# Qt require many packages to build and docs.rs build environment doesn't have them.
features = ["gtk", "win32", "all"]
no-default-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
    "aarch64-apple-darwin",
    "aarch64-apple-ios",
    "aarch64-linux-android",
]

[dependencies]
winio-primitive = { workspace = true }
winio-layout = { workspace = true }
winio-handle = { workspace = true }
winio-elm = { workspace = true, features = ["handle", "primitive"] }

compio = { workspace = true, default-features = false, optional = true }
compio-log = { workspace = true }

cfg-if = { workspace = true }
cookie = { workspace = true, optional = true }
futures-util = { workspace = true }
inherit-methods-macro = { workspace = true }
image = { workspace = true }
plotters-backend = { workspace = true, optional = true }
wgpu = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
winio-ui-windows-common = { workspace = true }
winio-ui-win32 = { workspace = true, optional = true }
winio-ui-winui = { workspace = true, optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
winio-ui-app-kit = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
winio-ui-android = { workspace = true }
android-activity = { workspace = true }

[target.'cfg(target_os = "ios")'.dependencies]
winio-ui-ui-kit = { workspace = true }

[target.'cfg(not(any(windows, target_vendor = "apple")))'.dependencies]
winio-ui-gtk = { workspace = true, optional = true }
winio-ui-qt = { workspace = true, optional = true }

[target.'cfg(not(any(target_vendor = "apple", target_os = "android")))'.dependencies]
winio-ui-stub = { workspace = true }

[build-dependencies]
cfg_aliases = "0.2"

[features]
default = ["qt", "win32"]
win32 = ["dep:winio-ui-win32"]
winui = ["dep:winio-ui-winui"]
gtk = ["dep:winio-ui-gtk"]
qt = ["dep:winio-ui-qt"]
enable_log = ["compio/enable_log", "compio-log/enable_log"]

media = [
    "winio-ui-stub/media",
    "winio-ui-app-kit/media",
    "winio-ui-ui-kit/media",
    "winio-ui-win32?/media",
    "winio-ui-winui?/media",
    "winio-ui-gtk?/media",
    "winio-ui-qt?/media",
    "winio-ui-android/media",
]
webview = [
    "dep:cookie",
    "winio-ui-stub/webview",
    "winio-ui-app-kit/webview",
    "winio-ui-ui-kit/webview",
    "winio-ui-win32?/webview",
    "winio-ui-winui?/webview",
    "winio-ui-gtk?/webview",
    "winio-ui-qt?/webview",
    "winio-ui-android/webview",
]
plotters = ["dep:plotters-backend"]
compio-compat = [
    "compio/runtime",
    "compio/compat",
    "compio/fs",
    "winio-ui-stub/compio-compat",
    "winio-ui-app-kit/compio-compat",
    "winio-ui-ui-kit/compio-compat",
    "winio-ui-win32?/compio-compat",
    "winio-ui-winui?/compio-compat",
    "winio-ui-gtk?/compio-compat",
    "winio-ui-qt?/compio-compat",
    "winio-ui-android/compio-compat",
]
wgpu = [
    "dep:wgpu",
    "winio-ui-stub/wgpu",
    "winio-ui-app-kit/wgpu",
    "winio-ui-ui-kit/wgpu",
    "winio-ui-win32?/wgpu",
    "winio-ui-winui?/wgpu",
    "winio-ui-gtk?/wgpu",
    "winio-ui-qt?/wgpu",
    "winio-ui-android/wgpu",
]
all = ["media", "webview", "wgpu", "plotters", "compio-compat"]

raw-window-handle = ["winio-handle/raw-window-handle"]

gen_blocks = ["winio-elm/gen_blocks"]
once_cell_try = [
    "winio-ui-windows-common/once_cell_try",
    "winio-ui-win32?/once_cell_try",
]
nightly = [
    "gen_blocks",
    "once_cell_try",
    "winio-elm/nightly",
    "winio-ui-windows-common/nightly",
    "winio-ui-win32?/nightly",
]

windows-dark-mode = [
    "winio-ui-win32?/dark-mode",
    "winio-ui-winui?/win32-dark-mode",
]
# For compatibility
win32-dark-mode = ["windows-dark-mode"]
winui-enable-cbs = ["winio-ui-winui?/enable-cbs"]
winui-webview-system = ["winio-ui-winui?/webview-system"]
winui-content-dialog = ["winio-ui-winui?/content-dialog"]
objc-static = ["winio-ui-app-kit/objc-static"]
qt-opengl = ["winio-ui-qt?/opengl"]
