[package]
name = "winio-android-example"
version = "0.1.0"
edition.workspace = true

[package.metadata.android]
apk_name = "winio-example"
use_aapt2 = true

[[package.metadata.android.application.activity]]
name = "rs.compio.winio.Activity"

[[package.metadata.android.application.activity.meta_data]]
name="android.app.lib_name"
value="winio_android_example"

[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.VIEW", "android.intent.action.MAIN"]
categories = ["android.intent.category.LAUNCHER"]

[lib]
path = "main.rs"
crate-type = ["cdylib"]

[dependencies]

[target.'cfg(target_os = "android")'.dependencies]
futures-util.workspace = true
android_logger = {version = "0.15.1",optional = true}
log = {workspace = true,optional = true}
compio-log = {workspace = true,optional = true}

[dependencies.winio]
path = "../../winio"

[features]
default = ["enable_log", "hello"]
enable_log = ["android_logger/default", "log", "compio-log/enable_log"]
hello = []
widgets = []