[package]
name = "winio-android-example"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[package.metadata.android]
package = "rs.compio.winio"
use_aapt2 = true

[package.metadata.android.sdk]
min_sdk_version = 24
target_sdk_version = 36
max_sdk_version = 36

[[package.metadata.android.application.activity]]
name = "android.app.NativeActivity"

[[package.metadata.android.application.activity.meta_data]]
name = "android.app.lib_name"
# To inference the library name automatically, omit the `value` field.
# value = "lib_name"

[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.VIEW", "android.intent.action.MAIN"]
categories = ["android.intent.category.LAUNCHER"]

[target.'cfg(target_os = "android")'.dependencies]
winio = { workspace = true, features = ["enable_log"] }

futures-util = { workspace = true }
android-activity = { workspace = true }
tracing_android_trace = "0.1.0"
tracing-subscriber = "0.3"

compio-log = { workspace = true, features = ["enable_log"] }
